--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,8 +29,7 @@ spec:
           httpGet:
             path: /
             port: 80
-          initialDelaySeconds: 8
-        # Даём 8 секунд на инициализацию (из 5-10 сек по ТЗ)
+          initialDelaySeconds: 8 # Даём 8 секунд на инициализацию (из 5-10 сек по ТЗ)
           periodSeconds: 5
       affinity:
         podAntiAffinity:
